DM_FP_NUMBER_CTOR